<resources>
    <string name="app_name">IOT Client</string>
    <string name="login_screen">Login Screen:</string>
    <string name="login">Login</string>
    <string name="checkin">Checkin</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="item5">item5</string>
    <string name="checkInURL">http://192.168.0.151:8080/checkIn</string>
    <string name="home">homeCheckin</string>
    <string name="workcheckin">cancel</string>
    <string name="uid">1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
