<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mcevoy.joe.iotclient.MainActivity">

    <Button
        android:text="@string/workcheckin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/workCheckin" />

    <Button
        android:text="@string/item5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item5"
        android:width="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/item4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item4"
        android:width="300dp"
        android:layout_above="@+id/item5"
        android:layout_alignLeft="@+id/item5"
        android:layout_alignStart="@+id/item5" />

    <Button
        android:text="@string/item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item3"
        android:width="300dp"
        android:layout_above="@+id/item4"
        android:layout_alignLeft="@+id/item4"
        android:layout_alignStart="@+id/item4" />

    <Button
        android:text="@string/item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item2"
        android:width="300dp"
        android:layout_above="@+id/item3"
        android:layout_alignLeft="@+id/item3"
        android:layout_alignStart="@+id/item3" />

    <Button
        android:text="@string/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item1"
        android:width="300dp"
        android:layout_above="@+id/item2"
        android:layout_alignLeft="@+id/item2"
        android:layout_alignStart="@+id/item2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:layout_above="@+id/item1"></View>

    <TextView
        android:text="Checked In at:"
        android:layout_width="wrap_content"
        android:id="@+id/infoText"
        android:layout_height="40dp"
        android:textSize="30dp"
        android:layout_below="@+id/workCheckin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Nowhere"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="30dp"
        android:id="@+id/checkinStatus"
        android:layout_below="@+id/homeCheckin"
        android:layout_alignRight="@+id/item1"
        android:layout_alignEnd="@+id/item1" />

    <Button
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeCheckin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
